Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-80667

Particles relying on size and opacity tables not working with OpenGL backend of QRhi

    XMLWordPrintable

Details

    • 83818431e15e36ad9c8484cee33475ba00731d6f (qt/qtbase/5.15)

    Description

      QTBUG-80628 uncovers that the array of floats (such as, opacitytable or sizetable) in the image particle shaders are not handled correctly with the GL backend of QRhi. (others work fine)

      This needs to be fixed, at least for float arrays, otherwise things like the Image Particles example's Color Table view will be all empty, with no particles shown.

      Attachments

        For Gerrit Dashboard: QTBUG-80667
        # Subject Branch Project Status CR V

        Activity

          People

            lagocs Laszlo Agocs
            lagocs Laszlo Agocs
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes