rhi: gl: Add support for arrays of float, vec2, vec3 and vec4

This is a thing in Qt Quick: there are some types of image particles
that use uniforms like "float opacitytable[64]".

This should make all views work correctly in the Image Particles example
when running on the OpenGL backend of QRhi. (other backends should work
as expected already)

Change-Id: I64a04fbb98b97d81d257b00b428582e751d46b8e
Fixes: QTBUG-80667
Reviewed-by: Paul Olav Tvete <paul.tvete@qt.io>